@@ -1,3 +1,9 @@
+2014-07-09  Per Bothner  <per@bothner.com>
+
+	* standard/Scheme.java (formatType): Don't enter impementation type
+	into type->name map.  That could overwrite an existing entry,
+	and doesn't seem right anyway.
+
 2014-07-05  Per Bothner  <per@bothner.com>
 
 	* lang/Quote.java (expand): Re-do handling of quasiquoted vectors
